--- a/src/components/charactersList/CharactersList.css
+++ b/src/components/charactersList/CharactersList.css
@@ -12,6 +12,11 @@
     gap: 20px;
 }
 
+a{
+    color: inherit;
+    text-decoration: inherit; 
+}
+
 .CharacterItem{
     width: 100%;
     height: 244px;
