--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,5 +1,5 @@
 .Header {
-    width: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,57 +13,62 @@
   padding: 50px 15px 15px;
 }
 
-.logo img{
-    width: 100%;
-    max-width: 600px;
-    aspect-ratio: 3/1;
+.logo img {
+  width: 100%;
+  max-width: 600px;
+  aspect-ratio: 3/1;
 }
 
 /* Filter input */
-.filter{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.filter {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.input_box{
-    width: 100%;
-    height: 56px;
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
-    align-items: center;
-    background: #fff;
-    border: 1px solid #00000060;
-    border-radius: 8px;
+.input_box {
+  width: 100%;
+  height: 56px;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  background: #fff;
+  border: 1px solid #00000060;
+  border-radius: 8px;
 }
 
-.search_svg{
-    height: 17.5px;
-    width: 17.5px;
-    margin: 0 5px 0 20px;
-    border-radius: 4px;
-    background-color: #fff;
-    cursor: pointer;
+.search_svg {
+  height: 17.5px;
+  width: 17.5px;
+  margin: 0 5px 0 20px;
+  border-radius: 4px;
+  background-color: #fff;
+  cursor: pointer;
 }
-.search_svg path{
-    fill:black;
-    fill-opacity:0.54;
-}
-
-.filter_input{
-    width: 100%;
-    height: 56px;
-    background-color: transparent;
-    border: none;
-    margin-left: 7px;
-    color: rgba(0, 0, 0, 0.5);
-    font-size: 16px;
-    font-weight: 400;
+.search_svg path {
+  fill: black;
+  fill-opacity: 0.54;
 }
 
-.filter_input:focus{
-    outline: none;
+.filter_input {
+  width: 100%;
+  height: 56px;
+  background-color: transparent;
+  border: none;
+  margin-left: 7px;
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 16px;
+  font-weight: 400;
 }
 
+.filter_input:focus {
+  outline: none;
+}
+
+@media (max-width: 850px) {
+  .input_box {
+    margin: 0 10px;
+  }
+}
